// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must apply at the end 1`] = `
{
  "characterList": [
    {
      "entity": null,
      "style": [],
    },
    {
      "entity": null,
      "style": [],
    },
    {
      "entity": null,
      "style": [],
    },
    {
      "entity": "x",
      "style": [],
    },
    {
      "entity": "x",
      "style": [],
    },
  ],
  "data": {},
  "depth": 0,
  "key": "a",
  "text": "Hello",
  "type": "unstyled",
}
`;

exports[`must apply from the start 1`] = `
{
  "characterList": [
    {
      "entity": "x",
      "style": [],
    },
    {
      "entity": "x",
      "style": [],
    },
    {
      "entity": null,
      "style": [],
    },
    {
      "entity": null,
      "style": [],
    },
    {
      "entity": null,
      "style": [],
    },
  ],
  "data": {},
  "depth": 0,
  "key": "a",
  "text": "Hello",
  "type": "unstyled",
}
`;

exports[`must apply to mutable character list 1`] = `
[
  {
    "entity": null,
    "style": Set {},
  },
  {
    "entity": "x",
    "style": Set {},
  },
  {
    "entity": "x",
    "style": Set {},
  },
  {
    "entity": "x",
    "style": Set {},
  },
  {
    "entity": null,
    "style": Set {},
  },
]
`;

exports[`must apply to mutable character list 2`] = `
[
  {
    "entity": null,
    "style": Set {},
  },
  {
    "entity": "x",
    "style": Set {},
  },
  {
    "entity": "y",
    "style": Set {},
  },
  {
    "entity": "x",
    "style": Set {},
  },
  {
    "entity": null,
    "style": Set {},
  },
]
`;

exports[`must apply to the entire text 1`] = `
{
  "characterList": [
    {
      "entity": "x",
      "style": [],
    },
    {
      "entity": "x",
      "style": [],
    },
    {
      "entity": "x",
      "style": [],
    },
    {
      "entity": "x",
      "style": [],
    },
    {
      "entity": "x",
      "style": [],
    },
  ],
  "data": {},
  "depth": 0,
  "key": "a",
  "text": "Hello",
  "type": "unstyled",
}
`;

exports[`must apply within 1`] = `
{
  "characterList": [
    {
      "entity": null,
      "style": [],
    },
    {
      "entity": "x",
      "style": [],
    },
    {
      "entity": "x",
      "style": [],
    },
    {
      "entity": "x",
      "style": [],
    },
    {
      "entity": null,
      "style": [],
    },
  ],
  "data": {},
  "depth": 0,
  "key": "a",
  "text": "Hello",
  "type": "unstyled",
}
`;
